fix weird scrollbars

--- a/_sass/_highlights.scss
+++ b/_sass/_highlights.scss
@@ -5,7 +5,7 @@
   background-color: #282828;
   /* margin: 20px 0 20px 0; */
   /* clear: both; */
-  overflow: scroll;
+  overflow-x: auto;
 }
 .highlight .err {
   color: #fb4934;
